// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/timeline/demo/basic.md correctly 1`] = `
<ul
  class="wmstool-timeline"
>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item wmstool-timeline-item-last"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/color.md correctly 1`] = `
<ul
  class="wmstool-timeline"
>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-green"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-green"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-red"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      <p>
        Solve initial network problems 1
      </p>
      <p>
        Solve initial network problems 2
      </p>
      <p>
        Solve initial network problems 3 2015-09-01
      </p>
    </div>
  </li>
  <li
    class="wmstool-timeline-item wmstool-timeline-item-last"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      <p>
        Technical testing 1
      </p>
      <p>
        Technical testing 2
      </p>
      <p>
        Technical testing 3 2015-09-01
      </p>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/custom.md correctly 1`] = `
<ul
  class="wmstool-timeline"
>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-custom wmstool-timeline-item-head-red"
    >
      <i
        class="anticon anticon-clock-circle-o"
        style="font-size:16px"
      />
    </div>
    <div
      class="wmstool-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item wmstool-timeline-item-last"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/pending.md correctly 1`] = `
<ul
  class="wmstool-timeline wmstool-timeline-pending"
>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item wmstool-timeline-item-last"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="wmstool-timeline-item wmstool-timeline-item-pending"
  >
    <div
      class="wmstool-timeline-item-tail"
    />
    <div
      class="wmstool-timeline-item-head wmstool-timeline-item-head-blue"
    />
    <div
      class="wmstool-timeline-item-content"
    >
      <a
        href="#"
      >
        See more
      </a>
    </div>
  </li>
</ul>
`;
